# cookiecutter-develop-pypackage

./: README.md  cookiecutter.json
{{ cookiecutter.project_dir_name }}/: pyproject.toml
{{ cookiecutter.project_dir_name }}/.github/workflows/: publish.yml  testing.yml
